--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
-# ignore the original sample data : sample_data
+
 sample_data/
 
-# ignore the preprocessed data : pre-data
 predata.pickle
 
-# ignore the simulator: linux_sim
 linux_sim/
+
+.ipynb_checkpoints/
+
+*~
+
+.gitignore
+
+
